<resources>
    <string name="app_name">Music Deck</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email:</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="password">Password:</string>
    <string name="enter_your_password_here">Enter your password here</string>
    <string name="log_in">Log in!</string>
    <string name="welcome_to_music_deck">Welcome To Music Deck!</string>
    <string name="sign_up">Sign Up!</string>
    <string name="sign_up_menu">Sign Up</string>
    <string name="login_menu">Login</string>
    <string name="create_new_list">Create New List</string>
    <string name="app_logo">app logo</string>
    <string name="create">Create!</string>
    <string name="description">Description:</string>
    <string name="enter_the_title_here">Enter the title here</string>
    <string name="title">Title:</string>
    <string name="pick_a_username">Pick a username!</string>
    <string name="username">Username:</string>
    <string name="subject_short_description">Subject / Short Description:</string>
    <string name="album_art">album art</string>
    <string name="by">By:</string>
    <string name="creator">Creator</string>
    <string name="favorite_track">Favorite track:</string>
    <string name="latest_lists">Latest Lists:</string>
    <string name="menu_button">menu button</string>
    <string name="share_button">share button</string>
    <string name="list_rank">List Rank</string>
    <string name="confirm_selection">Confirm Selection</string>
    <string name="submit">Submit</string>
    <string name="search">Search...</string>
    <string name="search_for_an_album">Search for an album:</string>
    <string name="search2">Search</string>
    <string name="current_user">Current User</string>
    <string name="view_profile">View Profile</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_deck">New Deck</string>
    <string name="delete_account">Delete Account</string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_deck">Delete Deck</string>
    <string name="add_card">Add Card</string>
    <string name="deck_title">Deck title</string>
</resources>