<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginFragment"
    android:orientation="vertical"
    android:background="#B5E1F7">

    <ImageView
        android:id="@+id/newListLogo"
        android:layout_width="wrap_content"
        android:layout_height="94dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/app_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_list"
        android:textSize="25sp"
        android:id="@+id/newListText"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:id="@+id/titleTV"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleET"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_the_title_here"
        android:textSize="15sp"
        android:inputType="text"
        android:maxLength="30"
        android:importantForAutofill="no"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20sp"
        android:id="@+id/descTV"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/descET"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:cursorVisible="true"
        android:importantForAutofill="no"
        android:inputType="textAutoCorrect"
        android:textSize="15sp"
        tools:ignore="LabelFor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:id="@+id/createButton"
        />

</LinearLayout>