<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DeckViewFragment"
    android:background="@android:color/darker_gray">

    <ImageButton
        android:id="@+id/edit_share_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_baseline_share_24"
        android:contentDescription="@string/share_button"
        android:translationZ="90dp"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deck_title"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:id="@+id/deck_edit_title_TV"
        android:paddingStart="50dp"
        android:padding="10dp"
        />

    <LinearLayout
        android:id="@+id/DeckEditButtons"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/deck_edit_title_TV"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/addCardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_card" />

        <Button
            android:id="@+id/deleteDeckButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_deck" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/DeckEditButtons"
        android:id="@+id/deck_edit_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        />

</RelativeLayout>