<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginFragment">

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:id="@+id/loginWelcome"
        android:layout_below="@id/loginWelcome"
        />
        -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="15sp"
        android:id="@+id/loginEmailTV"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginEmailET"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/loginEmailTV"
        android:hint="@string/enter_your_email_here"
        android:textSize="15sp"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:autofillHints="email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="15sp"
        android:id="@+id/loginPassTV"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/loginEmailET"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginPassET"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/loginPassTV"
        android:hint="@string/enter_your_password_here"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:maxLength="30"
        android:autofillHints="password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="13sp"
        android:padding="10dp"
        android:layout_below="@id/loginPassET"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:id="@+id/loginButton"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:id="@+id/changeUsernameET"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="Enter a new username"
        android:inputType="text"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:enabled="false"
        android:importantForAutofill="no"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Username!"
        android:textSize="13sp"
        android:padding="10dp"
        android:layout_below="@id/changeUsernameET"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:id="@+id/changeUNButton"
        android:visibility="invisible"
        android:enabled="false"
    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete Account!"
        android:textSize="13sp"
        android:padding="10dp"
        android:layout_below="@id/changeUNButton"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:id="@+id/accDelButton"
        android:visibility="invisible"
        android:enabled="false"
    />

    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:id="@+id/loginProgBar"
        android:visibility="invisible"
        />

</RelativeLayout>